Pulling out more adapters
